modal added to survery page

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -21,6 +21,25 @@
 
 <body>
 
+  <div class="modal fade" id="myModal">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">And your best match is...</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p id='friendName'></p>
+          <img id='friendImg' src="" height='300'>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
@@ -43,6 +62,7 @@
     <a href="https://github.com/suresh7127/Friend-Finder.git">Github Repo</a>
   </div>
   <br>
+
   </div>
 
   <script src='logic.js'></script>
