Multiple survey questions added with placeholderfor image

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -69,15 +69,74 @@
     <h3>About You</h3>
     <div class="form-group">
       <label for="Name">Name (Required)</label>
-      <input type="text" class='form-control' id='name' placeholder="Barak Obama">
+      <input type="text" class='form-control' id='name' placeholder="Donald Trump">
     </div>
     <div class="form-group">
       <label for="image">Link to Photo Image (Required)</label>
       <input type="text" class='form-control' id='image'
-        placeholder="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/BarackObama2005portrait_edit2.jpg/1200px-BarackObama2005portrait_edit2.jpg">
+        placeholder="https://en.wikipedia.org/wiki/Donald_Trump#/media/File:Donald_Trump_official_portrait.jpg">
     </div>
     <hr>
-
+    <h3>Question 1</h3>
+    <h4>I like talking to people. It gives me immence pleasure...</h4>
+    <div class="form-group">
+      <select name="quest1" id="quest1">
+        <option value="">Select an Option</option>
+        <option value="1">1 (Strongly Disagree)</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 (Strongly Agree)</option>
+      </select>
+    </div>
+    <h3>Question 2</h3>
+    <h4>I am interested in outdoor activities.</h4>
+    <div class="form-group">
+      <select name="quest2" id="quest2">
+        <option value="">Select an Option</option>
+        <option value="1">1 (Strongly Disagree)</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 (Strongly Agree)</option>
+      </select>
+    </div>
+    <h3>Question 3</h3>
+    <h4>I often creates problems in group rather than giving them a solution.</h4>
+    <div class="form-group">
+      <select name="quest3" id="quest3">
+        <option value="">Select an Option</option>
+        <option value="1">1 (Strongly Disagree)</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 (Strongly Agree)</option>
+      </select>
+    </div>
+    <h3>Question 4</h3>
+    <h4>I consider myself egoeist.</h4>
+    <div class="form-group">
+      <select name="quest4" id="quest4">
+        <option value="">Select an Option</option>
+        <option value="1">1 (Strongly Disagree)</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 (Strongly Agree)</option>
+      </select>
+    </div>
+    <h3>Question 5</h3>
+    <h4>I usually mess with people around me.</h4>
+    <div class="form-group">
+      <select name="quest5" id="quest5">
+        <option value="">Select an Option</option>
+        <option value="1">1 (Strongly Disagree)</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 (Strongly Agree)</option>
+      </select>
+    </div>
 
     <div class="btn btn-primary btn-block" id="submit">
       <h4><span class="glyphicon glyphicon-question-sign"></span> Find your friend</h4>
